# SOSD

./: .gitmodules  CMakeLists.txt  benchmark.cc  benchmark.h
benchmarks/: benchmark_xindex.cc  benchmark_xindex.h
competitors/: xindex.h
scripts/: mydatasets.txt  myscript.sh
